--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,12 +2,12 @@
 
 html,body {width: 100%;height: 100%;padding: 0 !important;overflow: hidden;}
 
-.pagina {width: 100%;height: 100%;/* background: url(../images/banner.jpg) center;background-size: cover;*/display: table;text-align: center}
+.pagina {width: 100%;height: 100%;/* background: url(../images/banner.jpg) center;background-size: cover;*/display: table;text-align: center;position: relative;}
 .boas_vindas {background: #008AB8;width: 100px;padding: 15px;font-family: 'Raleway', sans-serif;font-size: 22px;color: #222}
 .banner_texto {display: table-cell;vertical-align: middle;position: relative;z-index: 101}
 .banner_texto h1 {font-family: 'Anton', sans-serif;text-transform: uppercase;font-size: 90px;color: #008AB8 !important;display: inline-block;border: 2px solid #008AB8 !important;padding: 5px}
 .h3_secundario_banner {margin-top: -5px;}
-.h3_secundario_banner1,.h3_secundario_banner {color:#222;font-family: 'Raleway', sans-serif;font-size: 22px;}
+.h3_secundario_banner1,.h3_secundario_banner {color:#333;font-family: 'Raleway', sans-serif;font-size: 22px;}
 .sobre {margin-top:170px;margin-bottom: 120px;color: #888 !important}
 .sobre_titulo {font-family: 'Anton', sans-serif;text-transform: uppercase;font-size: 80px}
 .detalhes_principal {font-family: 'Raleway', sans-serif;font-size: 22px;line-height: 1.6;color:#454545;margin-bottom: 70px}
@@ -22,8 +22,8 @@ html,body {width: 100%;height: 100%;padding: 0 !important;overflow: hidden;}
 .contato_espaco {padding: 5px 0 5px 5px}
 .detalhes {padding: 50px 0}
 .pagina_total {background: white;position: relative;z-index: 200}
-.video_background_filtro {width: 100%;height: 100%;position: absolute;z-index: 100;background: rgba(0,0,0,.9);}
-.video_background {width: 100%;height: 100%;position: absolute;z-index: 99}
+.video_background_filtro {width: 100%;height: 100%;position: fixed;z-index: 100;background: rgba(0,0,0,.9);}
+.video_background {width: 100%;height: 100%;position: fixed;z-index: 99}
 video {min-width: 100%;min-height: 100%;position: fixed;width: auto;height: auto;left: 0;top: 0;background-size: cover;}
 .rodape {display: block;padding: 20px 0;background: #fff;line-height: 35px}
 .conhecimentos {padding: 20px 0}
