--- a/css/estilo.css
+++ b/css/estilo.css
@@ -7,7 +7,7 @@ html,body {width: 100%;height: 100%;padding: 0 !important;overflow: hidden;}
 .banner_texto {display: table-cell;vertical-align: middle;position: relative;z-index: 101}
 .banner_texto h1 {font-family: 'Anton', sans-serif;text-transform: uppercase;font-size: 90px;color: #008AB8 !important;display: inline-block;border: 2px solid #008AB8 !important;padding: 5px}
 .h3_secundario_banner {margin-top: -5px;}
-.h3_secundario_banner1,.h3_secundario_banner {color:#333;font-family: 'Raleway', sans-serif;font-size: 22px;}
+.h3_secundario_banner1,.h3_secundario_banner {color:#ccc;font-family: 'Raleway', sans-serif;font-size: 22px;}
 .sobre {margin-top:170px;margin-bottom: 120px;color: #888 !important}
 .sobre_titulo {font-family: 'Anton', sans-serif;text-transform: uppercase;font-size: 80px}
 .detalhes_principal {font-family: 'Raleway', sans-serif;font-size: 22px;line-height: 1.6;color:#454545;margin-bottom: 70px}
